# ImAge_workflow

./: .gitignore  README.md  pyproject.toml
subfunctions/: progress_printer.py
workflow/: export_o4_ImAge_validation.py  fig_o4_ImAge_validation_VIOLIN.py  main.py  o1_illumination_correction.py  o2_segmentation.py  o3_extract_features.py  o4_ImAge_validation.py  visualization.py
workflow/subfunctions/: check_zslice_consistency.py  crop3d.py  dir_rmv_file.py  dir_rmv_folder.py  ezsave.py  imreqant.py  interp3d.py  loadPathGenerator.py  paramerge.py  progress_display.py
workflows/: config.py  fig_o4_ImAge_validation_VIOLIN.py  fig_s2_o5_randboot_EpiAge_lsvm_VIOLIN_TTCOMP.py  main.py  o1_illumination_correction.py  o2_segmentation.py  o3_extract_features.py  o4_ImAge_validation.py  s2_o1_BaSiC.py  s2_o4_3Dinterp_exfeatures.py  s2_o5_randboot_EpiAge_lsvm.py
workflows/subfunctions/: ELTA_functions.py  crop3d.py  extract_metadata_to_df.py  ezload.py  ezsave.py  gpuinit.py  idxremover.py  interp3d.py  progress_display.py  progress_printer.py  progressregister.py
